# pango-cmake

./: CMakeLists.txt  config.h.win32.in  pango-features.h.cmake.in
cmake/: AutotoolsHelpers.cmake  CheckAnsiC.cmake  FindCairo.cmake  GLibHelpers.cmake
pango-view/: CMakeLists.txt
